@@ -6,5 +6,7 @@ Resource          plone/app/robotframework/saucelabs.robot
 
 *** Test Cases ***
 Go to projects folder
+    Given I'm logged in as a 'PM'
     Go to homepage
-    Click link    Projects
+    Click link    ${PLONE_URL}/projects
+    Click link    ${PLONE_URL}/projects/project1
